--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
             </div>
         </div>
         <div id="app-page">
+          <div id="canvas-container">
             <canvas style="order:0;"></canvas>
+          </div>
             <div class="chat-container" style="order:1;">
                 <!-- Chat are to send and receive messages -->
                 <div class="chat_area">
