--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
         <script src="script.js"></script>
     </head>
     <body>
-        <div id="login-page">
+        <div style="background-image: url('arcade.jpg');" id="login-page">
             <!-- Login area where username and roomname are inputted -->
             <div class="on-join-div">
+              <p id ="welcome-msg">Welcome to Virtual Chat 2D!</p>
               <div class="chat_input join" style="order: 1">
-                <p style="order: 0; margin: 1%">User Name</p>
+                <p style="order: 0; margin: 1%;">User Name</p>
                 <input type="text" id="on-join-input-userName" name="fname" style="order: 1"/>
                 <p style="order: 2; margin: 1%">User Password</p>
                 <input type="password" id="on-join-input-password" name="fname" style="order: 3"/>
