Copiado arhcivos servidor

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
         <script src="script.js"></script>
     </head>
     <body>
-        <div style="background-image: url('arcade.jpg');" id="login-page">
+        <div style="background-image: url('images/arcade.jpg');" id="login-page">
             <!-- Login area where username and roomname are inputted -->
             <div class="on-join-div">
               <p id ="welcome-msg">Welcome to Virtual Chat 2D!</p>
@@ -63,7 +63,7 @@
                   </div>
             </div>
           </div>
-        <script src="public/room.js"></script>
+        <script src="room.js"></script>
         <script src="myapp.js"></script>
         <script src="code.js"></script>
         <script> MYCHAT.init(); </script>
